# mci-rs

./: .gitignore  Cargo.toml  README.md
mci/: Cargo.toml
mci-atsamd51/: Cargo.toml  README.md
mci-atsamd51/.cargo/: config
mci-atsamd51/src/: lib.rs
mci/src/: card_type.rs  commands.rs  dummy_input_pin.rs  error.rs  fat32.rs  flags.rs  lib.rs  mci.rs  mci_card.rs  mmc.rs  mmc_functions.rs  mode_index.rs  sd_mmc.rs  sdio.rs  sdmmc.rs  transfer.rs
mci/src/command/: mci_command.rs  mod.rs
mci/src/command/sd_commands/: cmd6.rs
mci/src/command/sdio_commands/: cmd52.rs  cmd53.rs
mci/src/command_arguments/: mci_command.rs  mod.rs
mci/src/command_arguments/mmc_commands/: mod.rs
mci/src/command_arguments/sd/: cmd6.rs  mod.rs
mci/src/command_arguments/sdio/: cmd52.rs  cmd53.rs
mci/src/command_arguments/sdio_commands/: cmd53.rs
mci/src/functions/: mmc.rs  mmc_functions.rs  mod.rs  sd.rs  sdio.rs  sdmmc.rs
mci/src/registers/: csd.rs  mod.rs  ocr.rs  register.rs
mci/src/registers/sd/: card_status.rs  scr.rs  switch_status.rs
mci/src/registers/sdio/: mod.rs
mci/src/registers/sdio/cccr/: block_size.rs  bus_interface.rs  bus_suspend.rs  card_capability.rs  cccr_sdio_revision.rs  cis_pointer.rs  execution_flags.rs  function_select.rs  high_speed.rs  interrupt_enable.rs  interrupt_pending.rs  io_abort.rs  io_enable.rs  io_ready.rs  mod.rs  power_control.rs  ready_flags.rs  sd_physical_specification.rs
mci/src/registers/sdio/fbr/: block_size.rs  cis_pointer.rs  csa_and_interface.rs  csa_pointer.rs  extended_interface_code.rs  fifo_to_csa.rs  power_control.rs
mci/src/sd/: mod.rs  sd_bus_width.rs  sd_functions.rs  sd_physical_specification.rs
src/: lib.rs
src/atsamd51/: mci.rs  mod.rs
src/sd_mmc/: card_state.rs  card_type.rs  card_version.rs  commands.rs  dummy_input_pin.rs  error.rs  mci.rs  mmc.rs  mod.rs  mode.rs  mode_index.rs  sd_mmc.rs  sdio.rs  sdio_state.rs  transfer.rs
src/sd_mmc/command/: device_mode.rs  device_type.rs  flags.rs  mod.rs  response_type.rs
src/sd_mmc/command/mmc_commands/: mod.rs
src/sd_mmc/command/sd_commands/: cmd6.rs  cmd8.rs  mod.rs
src/sd_mmc/command/sdio_commands/: cmd52.rs  cmd53.rs  mod.rs
src/sd_mmc/registers/: csd.rs  mod.rs  ocr.rs  registers.rs
src/sd_mmc/registers/sd/: card_status.rs  mod.rs  scr.rs  switch_status.rs
src/sd_mmc/registers/sdio/: mod.rs
src/sd_mmc/registers/sdio/cccr/: block_size.rs  bus_interface.rs  bus_suspend.rs  card_capability.rs  cccr_sdio_revision.rs  cis_pointer.rs  execution_flags.rs  function_select.rs  high_speed.rs  interrupt_enable.rs  interrupt_pending.rs  io_abort.rs  io_enable.rs  io_ready.rs  mod.rs  power_control.rs  ready_flags.rs  sd_physical_specification.rs
src/sd_mmc/registers/sdio/fbr/: block_size.rs  cis_pointer.rs  csa_and_interface.rs  csa_pointer.rs  extended_interface_code.rs  fifo_to_csa.rs  mod.rs  power_control.rs
src/sd_mmc/sd/: mod.rs  sd_bus_width.rs  sd_physical_specification.rs  sd_security.rs
src/sd_mmc/sdio/registers/: mod.rs  registers.rs
src/sd_mmc/sdio/registers/cccr/: block_size.rs  bus_interface.rs  bus_suspend.rs  card_capability.rs  cccr_sdio_revision.rs  cis_pointer.rs  execution_flags.rs  function_select.rs  high_speed.rs  interrupt_enable.rs  interrupt_pending.rs  io_abort.rs  io_enable.rs  io_ready.rs  mod.rs  power_control.rs  ready_flags.rs  sd_physical_specification.rs
src/sd_mmc/sdio/registers/fbr/: block_size.rs  cis_pointer.rs  csa_and_interface.rs  csa_pointer.rs  extended_interface_code.rs  fifo_to_csa.rs  mod.rs  power_control.rs
