[package]
name = "atsam_sdio_sdmmc"
version = "0.0.0"
authors = ["Michael van Niekerk <mvniekerk@chazaqdev.com>"]
edition = "2018"
repository = "https://github.com/mvniekerk/atsam_sdio_sdmmc"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit_field = "~0.10"

[dependencies.atsamd-hal]
version = "~0.8"
default-features = false
optional = true

[dependencies.cortex-m-rt]
version = "~0.6"
optional = true

[features]
default = []
atsamd51 = ["rt", "atsamd-hal", "atsamd-hal/samd51j20a", "atsamd-hal/samd51", "unproven"]
unproven = ["atsamd-hal/unproven"]
rt = ["cortex-m-rt", "atsamd-hal/samd51j20a-rt"]