[package]
name = "mci"
version = "0.0.0"
authors = ["Michael van Niekerk <mike@pathfinderza.com>"]
edition = "2018"
repository = "https://github.com/mvniekerk/mci-rs"
description = "MultiMedia Card Interface (SD, MMC, SDIO) implementation using MCI"
categories = [
    "embedded-hal", "hal", "mci", "sd", "sdmmc", "mmc", "sdio", "embedded", "no-std"
]

[dependencies]
bit_field = "~0.10"
embedded-hal = "^0.2"

[features]
sdio = []
mmc = []
default = ["embedded-hal/unproven"]